layout improvements corrected date in html

--- a/2012/sass/base.scss
+++ b/2012/sass/base.scss
@@ -24,9 +24,9 @@ $primary-color: #a00;
 $highlight-color: #ffa;
 
 $total-cols: 12;
-$col-width: 80px;
-$gutter-width: 0px;
-$side-gutter-width: 0px;
+$col-width: 5em;
+$gutter-width: 1em;
+$side-gutter-width: 1em;
 
 @font-face {
 	font-family: 'Vegur';
