--- a/2012/sass/sponsors.scss
+++ b/2012/sass/sponsors.scss
@@ -1,4 +1,5 @@
 section#sponsors{
+  @include full;
   h2{
     margin: 0;
     padding: 10px;
@@ -24,5 +25,13 @@ section#sponsors{
     div{padding: 4px 10px;}
     
     a{color: $primary-color;}
+  }
+}
+
+@media screen and (min-width: 800px) {
+  section#sponsors{
+    @include columns(8);
+    @include prefix(2);
+    @include suffix(2);
   }
 }
