--- a/2012/sass/public.scss
+++ b/2012/sass/public.scss
@@ -90,6 +90,7 @@ nav{
       body#page_directions &.directions,
       body#page_badges &.badges,
       body#page_sponsors &.sponsors,
+      body#photos &.photos,
       &:hover{
         background-color: $highlight-color;
       }
