--- a/2013/scss/application.scss
+++ b/2013/scss/application.scss
@@ -1,1 +1,10 @@
+$gray-dark: #333;
+$white: #fff;
+$red: #a00;
+
+@import 'mixins';
 @import 'normalize';
+@import 'typography';
+
+
+@import 'layout';
