--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -329,3 +329,50 @@ textarea {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+html, body {
+  font-family: 'proxima-nova'; }
+
+#header {
+  font-family: 'brandon-grotesque'; }
+  #header h1, #header h2, #header h3 {
+    margin: 0;
+    padding: 0;
+    line-height: 1.2em; }
+  #header h1 {
+    font-size: 60px;
+    font-weight: 900; }
+  #header h2 {
+    font-size: 40px;
+    font-weight: 300; }
+  #header h3 {
+    font-size: 30px;
+    font-weight: 900; }
+
+.container {
+  display: block;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto; }
+
+#header {
+  padding: 60px;
+  border-bottom: solid 4px #aa0000;
+  background: #F2ECCE; }
+  #header h1 a {
+    font-size: 60px;
+    font-weight: 900;
+    color: #aa0000;
+    text-decoration: none; }
+
+#content .article {
+  width: 50%;
+  float: left;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+  #content .article.sponsorship {
+    width: 100%; }
