Header: responsive layout

--- a/2013/scss/typography.scss
+++ b/2013/scss/typography.scss
@@ -5,11 +5,36 @@ html, body{
 
 #header{
   font-family: 'brandon-grotesque';
+
   h1, h2, h3{
     margin: 0; padding: 0; line-height: 1.2em;
   }
 
-  h1{font-size: 60px; font-weight: 900;}
-  h2{font-size: 40px; font-weight: 300;}
-  h3{font-size: 30px; font-weight: 900;}
+  h1{font-size: 40px; font-weight: 900;}
+  h2{font-size: 20px; font-weight: 300;}
+  h3{font-size: 20px; font-weight: 900;}
+
+  @media screen and (min-width:500px){
+    h1{font-size: 50px;}
+    h2{font-size: 24px;}
+    h3{font-size: 24px;}
+  }
+
+  @media screen and (min-width:600px){
+    h1{font-size: 60px;}
+    h2{font-size: 24px;}
+    h3{font-size: 24px;}
+  }
+
+  @media screen and (min-width:800px){
+    h1{font-size: 70px;}
+    h2{font-size: 24px;}
+    h3{font-size: 26px;}
+  }
+
+  @media screen and (min-width:940px){
+    h1{font-size: 92px;}
+    h2{font-size: 30px;}
+    h3{font-size: 30px;}
+  }
 }
