--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -340,14 +340,42 @@ html, body {
     padding: 0;
     line-height: 1.2em; }
   #header h1 {
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 900; }
   #header h2 {
-    font-size: 40px;
+    font-size: 20px;
     font-weight: 300; }
   #header h3 {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 900; }
+  @media screen and (min-width: 500px) {
+    #header h1 {
+      font-size: 50px; }
+    #header h2 {
+      font-size: 24px; }
+    #header h3 {
+      font-size: 24px; } }
+  @media screen and (min-width: 600px) {
+    #header h1 {
+      font-size: 60px; }
+    #header h2 {
+      font-size: 24px; }
+    #header h3 {
+      font-size: 24px; } }
+  @media screen and (min-width: 800px) {
+    #header h1 {
+      font-size: 70px; }
+    #header h2 {
+      font-size: 24px; }
+    #header h3 {
+      font-size: 26px; } }
+  @media screen and (min-width: 940px) {
+    #header h1 {
+      font-size: 92px; }
+    #header h2 {
+      font-size: 30px; }
+    #header h3 {
+      font-size: 30px; } }
 
 .container {
   display: block;
@@ -356,23 +384,51 @@ html, body {
   box-sizing: border-box;
   width: 800px;
   max-width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 10px; }
+
+#content .article {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px; }
+  @media screen and (min-width: 800px) {
+    #content .article {
+      width: 50%;
+      float: left; }
+      #content .article.sponsorship {
+        width: 100%; } }
 
 #header {
-  padding: 60px;
+  padding: 20px;
   border-bottom: solid 4px #aa0000;
   background: #F2ECCE; }
   #header h1 a {
-    font-size: 60px;
-    font-weight: 900;
     color: #aa0000;
     text-decoration: none; }
-
-#content .article {
-  width: 50%;
-  float: left;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-  #content .article.sponsorship {
-    width: 100%; }
+  #header h1 a span {
+    color: #333333; }
+  @media screen and (min-width: 700px) {
+    #header {
+      padding: 40px; }
+      #header h2 {
+        margin: -12px 0 0 120px; }
+      #header h3 {
+        margin-top: -56px;
+        text-align: right; } }
+  @media screen and (min-width: 800px) {
+    #header {
+      padding: 40px; }
+      #header h2 {
+        margin: -16px 0 0 140px; }
+      #header h3 {
+        margin-top: -62px;
+        text-align: right; } }
+  @media screen and (min-width: 940px) {
+    #header {
+      padding: 60px; }
+      #header h2 {
+        margin: -20px 0 0 200px; }
+      #header h3 {
+        margin-top: -72px;
+        text-align: right; } }
