--- a/2013/scss/layout.scss
+++ b/2013/scss/layout.scss
@@ -1,38 +1,21 @@
-body{
-  // background: $gray-dark;
-}
-
 .container{
   display: block;
   @include border-box;
   width: 800px;
   max-width: 100%;
   margin: 0 auto;
-}
-
-#header{
-  padding: 60px;
-  border-bottom: solid 4px $red;
-  background: #F2ECCE;
-
-  h1{
-    a{
-      font-size: 60px;
-      font-weight: 900;
-      color: $red;
-      text-decoration: none;
-    }
-  } 
+  padding: 10px;
 }
 
 #content{
   .article{
-    width: 50%;
-    float: left;
     @include border-box;
+    padding: 10px;
 
-    &.sponsorship{
-      width: 100%;
+    @media screen and (min-width: 800px){
+      width: 50%; float: left;
+
+      &.sponsorship{width: 100%;}
     }
   }
 }
