--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -5,38 +5,64 @@
     h2{
       margin: 0;
       font-family: 'brandon-grotesque';
-      font-weight: 300; font-size: 40px;
+      font-weight: 300; font-size: 24px;
       text-align: center;
+      @media screen and (min-width: 600px){
+        font-size: 30px;
+      }
+      @media screen and (min-width: 800px){
+        font-size: 40px;
+      }
     }
 
     .speakers{
       margin: 0; padding: 0;
       text-align: center;
 
+      @media screen and (min-width: 900px){
+        margin: 0 20px;
+      }
+
       li{
-        margin: 10px 0; padding: 0;
+        margin: 0; padding: 0;
         display: inline-block;
         text-align: center;
-        width: 160px;
+        width: 120px;
+
+        @media screen and (min-width: 600px){
+          width: 140px;
+        }
+
+        @media screen and (min-width: 900px){
+          width: 160px;
+        }
 
         img{
           display: block;
           margin: 5px auto;
-          width: 100px; height: 100px;
-          border-radius: 60px;
+          width: 80px; height: 80px;
+          border-radius: 50px;
           border: solid 10px $secondary-color;
+
+          @media screen and (min-width: 600px){
+            width: 100px; height: 100px;
+            border-radius: 60px;
+          }
+
         }
 
         a{
           text-decoration: none;
           color: $primary-color;
           font-weight: 600;
+          display: block;
+          margin: 0 auto;
         }
+
+        span{color: $gray-light;}
       }
     }
-
-    #sidebar{
-      margin-top: 20px;
-    }
   }  
+  
+  #sidebar{margin-top: 40px;}
 }
