--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -332,7 +332,7 @@ table {
 
 html, body {
   font-family: 'proxima-nova';
-  font-size: 14px;
+  font-size: 15px;
   color: #444;
   background: white; }
 
@@ -397,34 +397,37 @@ html, body {
   margin: 0 auto;
   padding: 10px; }
 
-#content {
-  float: left;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-  @media screen and (min-width: 720px) {
-    #content {
-      width: 70%; } }
+ul.actions {
+  width: 100%;
+  margin: 20px 0;
+  padding: 0;
+  text-align: center; }
+  ul.actions li {
+    display: inline-block;
+    margin: 0; }
 
-#sidebar {
-  float: right;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-  #sidebar .article {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0 10px; }
-  @media screen and (min-width: 720px) {
-    #sidebar {
-      width: 30%; } }
+ul.actions li a, a.button {
+  margin: 0;
+  padding: 0 16px;
+  font-size: 21px;
+  line-height: 36px;
+  font-family: 'brandon-grotesque';
+  font-weight: 300;
+  text-decoration: none;
+  background: #aa0000;
+  color: #f2ecce;
+  border-radius: 18px; }
+  ul.actions li a:hover, ul.actions li a:focus, ul.actions li a:active, a.button:hover, a.button:focus, a.button:active {
+    color: #aa0000;
+    background: #f2ecce; }
 
 #header {
-  padding: 20px;
+  padding: 20px 0;
   border-bottom: solid 4px #aa0000;
   background: #f2ecce url("images/header.jpg") no-repeat center center;
   background-size: auto 100%; }
+  #header .container {
+    width: 1000px; }
   #header h1 a {
     color: #aa0000;
     text-decoration: none; }
@@ -432,7 +435,7 @@ html, body {
     color: #333333; }
   @media screen and (min-width: 700px) {
     #header {
-      padding: 40px; }
+      padding: 40px 0; }
       #header h2 {
         margin: -12px 0 0 120px; }
       #header h3 {
@@ -440,7 +443,7 @@ html, body {
         text-align: right; } }
   @media screen and (min-width: 800px) {
     #header {
-      padding: 40px; }
+      padding: 40px 0; }
       #header h2 {
         margin: -16px 0 0 140px; }
       #header h3 {
@@ -449,7 +452,7 @@ html, body {
   @media screen and (min-width: 940px) {
     #header {
       background-size: 100% auto;
-      padding: 60px; }
+      padding: 60px 0; }
       #header h2 {
         margin: -20px 0 0 200px; }
       #header h3 {
@@ -471,12 +474,10 @@ html, body {
       #home #content h2 {
         font-size: 40px; } }
   #home #content .speakers {
-    margin: 0;
-    padding: 0;
-    text-align: center; }
-    @media screen and (min-width: 900px) {
-      #home #content .speakers {
-        margin: 0 20px; } }
+    margin: 0 0 40px 0;
+    padding: 0 0 40px 0;
+    text-align: center;
+    border-bottom: solid 4px #f2ecce; }
     #home #content .speakers li {
       margin: 0;
       padding: 0;
@@ -509,5 +510,17 @@ html, body {
         margin: 0 auto; }
       #home #content .speakers li span {
         color: #999999; }
-#home #sidebar {
-  margin-top: 40px; }
+  #home #content div.article {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 20px;
+    float: left;
+    text-align: center; }
+    @media screen and (min-width: 500px) {
+      #home #content div.article {
+        width: 50%; } }
+    @media screen and (min-width: 800px) {
+      #home #content div.article {
+        width: 33%; } }
