--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -16,12 +16,9 @@
     }
 
     .speakers{
-      margin: 0; padding: 0;
+      margin: 0 0 40px 0; padding: 0 0 40px 0;
       text-align: center;
-
-      @media screen and (min-width: 900px){
-        margin: 0 20px;
-      }
+      border-bottom: solid 4px $secondary-color;
 
       li{
         margin: 0; padding: 0;
@@ -62,7 +59,20 @@
         span{color: $gray-light;}
       }
     }
+
+    div.article{
+      @include border-box;
+      width: 100%;
+      padding: 0 20px;
+      float: left;
+      text-align: center;
+      
+
+
+      @media screen and (min-width: 500px){ width: 50%;}
+      @media screen and (min-width: 800px){ width: 33%;}
+      // @media screen and (min-width: 900px){ width: 25%;}
+    }
   }  
   
-  #sidebar{margin-top: 40px;}
 }
