--- a/2013/scss/layout.scss
+++ b/2013/scss/layout.scss
@@ -7,20 +7,43 @@
   padding: 10px;
 }
 
-#content{
-  float: left;
-  @include border-box;
-  @media screen and (min-width: 720px){ width: 70%;}
+ul.actions{
+  width: 100%;
+  margin: 20px 0;
+  padding: 0;
+  text-align: center;
+
+  li{display: inline-block; margin: 0;}
 }
 
-#sidebar{
-  float: right;
-  @include border-box;
+ul.actions li a, a.button{
+  margin: 0;
+  padding: 0 16px;
+  font-size: 21px;
+  line-height: 36px;
+  font-family: 'brandon-grotesque';
+  font-weight: 300;
+  text-decoration: none;
+  background: $primary-color;
+  color: $secondary-color;
+  border-radius: 18px;
 
-  .article{
-    @include border-box;
-    padding: 0 10px;
+  &:hover, &:focus, &:active{
+    color: $primary-color;
+    background: $secondary-color;
   }
-
-  @media screen and (min-width: 720px){ width: 30%;}
 }
+
+
+
+// #sidebar{
+//   float: right;
+//   @include border-box;
+
+//   .article{
+//     @include border-box;
+//     padding: 0 10px;
+//   }
+
+//   @media screen and (min-width: 720px){ width: 30%;}
+// }
